src/objects/Post_Install_Log__c.object
<CustomObject>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Post_Install_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <label>Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notified_For_Failure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notified For Failure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Script_Included_For_Package__c</fullName>
        <label>Script Included For Package</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Script_Name__c</fullName>
        <label>Script Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Script_Run_For_Package__c</fullName>
        <label>Script Run For Package</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Errored</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Post Install Log</label>
    <nameField>
        <displayFormat>PIL-{00000000}</displayFormat>
        <label>Post Install Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Post Install Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>